--- a/src/main/resources/static/login.css
+++ b/src/main/resources/static/login.css
@@ -1,17 +1,15 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.6fr 1.7fr 0.7fr;
-    grid-template-areas: ". . . ." ". . . ." ". . . .";
+body {
+    background-color: #f8f8f8;
 }
+
 
 .btn {
     padding: .5rem 1.5rem;
     font-size: .85rem;
     font-weight: 600;
     text-transform: uppercase;
-    color: #2522ff;
-    background: #111;
+    color: #ffffff;
+    background: #2fd889;
     border-radius: .25rem;
     margin: 0;
 }
