--- a/src/main/resources/templates/rps.html
+++ b/src/main/resources/templates/rps.html
@@ -4,7 +4,7 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>Rock Paper Scissors Application</title>
-    <link rel="stylesheet" href="/static/main.css" />
+    <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
 
